# gops

./: .gitignore  README.md
gops-clients/: README.md
gops-clients/javascript/: package-lock.json  package.json  run_player.js
gops-clients/javascript/players/: player.js
gops-clients/python/: pyproject.toml  run_player.py  sim_games.py
gops-clients/python/players/: __init__.py  heuristic.py  polarized.py  random.py
gops-clients/python/players/util/: game.py
gops-engine/: README.md  main.py  pyproject.toml
gops-engine/app/: connection_manager.py  exceptions.py  game.py
gops-engine/ui/: index.html
gops-player-examples/: README.md
gops-player-examples/javascript/: package.json
gops-player-examples/javascript/players/: random_player.js
gops-player-examples/python/: run_player.py
gops-player-examples/python/players/: __init__.py  base.py  copycat.py  heuristic.py
gops-player-examples/python/players/util/: game.py
gops-player-template/: README.md
gops-player-templates/: README.md
gops-player-templates/python/: pyproject.toml
gops-player-templates/python/random_player/: play.py
